Add ability to send custom notifications

--- a/src/modules/ext.gloopcontrol.styles/styles.less
+++ b/src/modules/ext.gloopcontrol.styles/styles.less
@@ -51,6 +51,10 @@
 			.cdx-mixin-css-icon( @cdx-icon-settings );
 		}
 
+		&--notification {
+			.cdx-mixin-css-icon( @cdx-icon-bell-outline )
+		}
+
 		&--book {
 			.cdx-mixin-css-icon( @cdx-icon-book )
 		}
