--- a/src/templates/MainPage.mustache
+++ b/src/templates/MainPage.mustache
@@ -16,6 +16,14 @@
 				  </span>
 		</a>
 
+		<a class="cdx-card cdx-card--is-link" href="{{ notifications_url }}">
+			<span class="cdx-card__icon ext-gloopcontrol-css-icon--notification"></span>
+			<span class="cdx-card__text">
+					<span class="cdx-card__text__title">Notifications</span>
+					<span class="cdx-card__text__description">Send an Echo notification to user(s).</span>
+				  </span>
+		</a>
+
 		<a class="cdx-card cdx-card--is-link" href="{{ site_config_url }}">
 			<span class="cdx-card__icon ext-gloopcontrol-css-icon--book"></span>
 			<span class="cdx-card__text">
