--- a/src/templates/UserDetails.mustache
+++ b/src/templates/UserDetails.mustache
@@ -4,7 +4,7 @@
 		<ul>
 			<li><strong>Registered at:</strong> {{ registered }}</li>
 			<li><strong>Email:</strong> {{ email }} ({{#email_authed}}confirmed at {{ email_authed }}{{/email_authed}}{{^email_authed}}<span style="color: red;">unconfirmed</span>{{/email_authed}})</li>
-			<li><strong>Real name:</strong> {{ real }}</li>
+			<li><strong>Temporary account:</strong> <div class="cdx-info-chip"><span class="cdx-info-chip__text">{{#temp}}Yes{{/temp}}{{^temp}}No{{/temp}}</span></div></li>
 		</ul>
 		<ul>
 			<li><strong>Is blocked here:</strong> {{#block_timestamp}}<span style="color: red;">Yes</span>, since {{block_timestamp}}. Block added by {{block_author}}. Expires at {{block_expiry}}.{{/block_timestamp}}{{^block_timestamp}}No{{/block_timestamp}}</li>
@@ -22,6 +22,7 @@
 		</ul>
 	</div>
 	<div style="margin-top: 1em;">
+		{{^temp}}
 		{{#rename}}
 		<a href="{{ rename }}">
 			<button class="cdx-button">
@@ -34,16 +35,19 @@
 				Change email
 			</button>
 		</a>
+		{{/temp}}
 		<a href="{{ reassign_edits_url }}">
 			<button class="cdx-button">
 				Reassign edits
 			</button>
 		</a>
+		{{^temp}}
 		<a href="{{ reset_password_url }}">
 			<button class="cdx-button cdx-button--action-destructive">
 				Reset password
 			</button>
 		</a>
+		{{/temp}}
 	</div>
 <!--	<details class="cdx-accordion">-->
 <!--		<summary>-->
